--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -12,6 +12,6 @@ mint = "0.5"
 shapefile = "0.2.2"
 boundingbox = { path = "../boundingbox" }
 aabb-quadtree = "0.2.0"
-
+rusqlite = { version = "0.25.0", features = ["bundled"]}
 serde = "1.0.125"
 bincode = "1.3.3"
