--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -7,11 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ggez = {  version = "0.5.1" }
 mint = "0.5"
 shapefile = "0.2.2"
 boundingbox = { path = "../boundingbox" }
-aabb-quadtree = "0.2.0"
-rusqlite = { version = "0.25.0", features = ["bundled"]}
-serde = "1.0.125"
+serde = { version = "1.0.125", features = ["derive"] }
 bincode = "1.3.3"
